--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             
             sb.push(' "*' , title, '*');
             for ( var i = 0; i < rows.length; i++ ) {
-                var row = rows[i].replace(/^\s*/, '').replace(/\s*$/, '').replace(/"/g, "'");
+                var row = rows[i].replace(/^\s*/, '').replace(/\s*$/, '').replace(/["“”]/g, "'");
                 if ( row == '' )
                     continue;
                 
